# ninox

./: LICENSE.txt  README.md  pyproject.toml
src/ninox/: __about__.py  __init__.py  cli.py  formatter.py  initialize.py  model_shape.ttl  owl_inference.py  pre-commit.sh  query_validation.py  shacl_validate.py  undefined_terms.rq
