[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ninox"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "svirgilgood", email = "svirgilgoodwin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "html5rdf==1.2.1",
  "owlrl==7.1.3",
  "packaging==24.2",
  "prettytable==3.14.0",
  "pyparsing==3.2.1",
  "pyshacl==0.30.0",
  "rdflib==7.1.3",
  "wcwidth==0.2.13",
]

[project.scripts]
ninox = "ninox.cli:cli"

[project.urls]
Documentation = "https://github.com/svirgilgood/ninox#readme"
Issues = "https://github.com/svirgilgood/ninox/issues"
Source = "https://github.com/svirgilgood/ninox"

[tool.hatch.version]
path = "src/ninox/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ninox tests}"

[tool.coverage.run]
source_pkgs = ["ninox", "tests"]
branch = true
parallel = true
omit = [
  "src/ninox/__about__.py",
]

[tool.coverage.paths]
ninox = ["src/ninox", "*/ninox/src/ninox"]
tests = ["tests", "*/ninox/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
